Website SEO techniques

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,13 @@
     Core values: Passion, Innovation & Fun,
   " i18n>
 
+  <meta name="title" content="GUUD">
+  <meta name="description" content="We are good people,    who wants the best of you!    Our purpose is create wellness and happiness around the world!.,    Mission: Hack brains and shape bodies,    Vision: Find the Guud in YOU. Let's Go!,    Core values: Passion, Innovation & Fun,">
+  <meta name="keywords" content="Passion, Innovation, Fun, GUUD, Health, GUUD Health, Hack, wellness, happiness, hapiness around the world">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <base href="/">
