--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Exo&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/see2gig.css">
 
+  <link href="//amp.azure.net/libs/amp/1.8.0/skins/amp-default/azuremediaplayer.min.css" rel="stylesheet">
+  <script src="//amp.azure.net/libs/amp/1.8.0/azuremediaplayer.min.js"></script>
+
   <meta name="description" content="
     GUUD:
     We are good people,
