--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <base href="/">
   <script type="text/javascript">
-    (function(c, l, a, r, i, t, y) {
+    /*(function(c, l, a, r, i, t, y) {
       c[a] = c[a] || function() {
         (c[a].q = c[a].q || []).push(arguments)
       };
@@ -42,7 +42,7 @@
       y = l.getElementsByTagName(r)[0];
       y.parentNode.insertBefore(t, y);
       console.log('a');
-    })(window, document, "clarity", "script", "is1o5j1w46");
+    })(window, document, "clarity", "script", "is1o5j1w46");*/
   </script>
 </head>
 <body>
