Actualizacion con nuevo repo GarsaLabs

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     Mission: Hack brains and shape bodies,
     Vision: Find the Guud in YOU. Let's Go!,
     Core values: Passion, Innovation & Fun,
+    GUUD
   " i18n>
 
   <meta name="title" content="GUUD">
